Fixed font-size on smaller screens

--- a/style.css
+++ b/style.css
@@ -67,9 +67,40 @@ a {
     }
 }
 
-@media screen and (max-width: 1044px) {
+@media screen and (max-width: 1090px) {
     #status {
         font-size: 7em;
-        max-width: 400px;
+        max-width: 300px;
+    }
+    #aside {
+        margin-right: 50px;
+        float: right;
+        margin-top: 100px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    #status {
+        font-size: 5em;
+        max-width: 200px;
+    }
+    #aside {
+        margin-right: 30px;
+        float: right;
+        margin-top: 100px;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    #status {
+        font-size: 2em;
+        margin: auto;
+    }
+    #aside {
+        margin: auto;
+    }
+
+    #further {
+        font-size: 1em;
     }
 }
